gcc/testsuite/g++.dg/cpp1z/pr84533.C
// { dg-options "-std=c++17" }

enum E { e, e };  // { dg-error "redefinition" }
